# AUX

./: CMakeLists.txt  README.md
include/: gamBackground.h
scripts/: build.py
src/: gamBackground.cc  main.cc
